force-app/main/default/objects/QuoteLineItem/fields/Opted_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Opted_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The discount pricebook the line item lands in based on the final amount after discount and tax. Populated by QuoteBuilderController on save / update using the PL4 -&gt; PL1 selection rule.</description>
    <label>Opted Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Quote Line Items (Opted)</relationshipLabel>
    <relationshipName>Quote_Line_Items_Opted</relationshipName>
    <type>Lookup</type>
</CustomField>