force-app/main/default/objects/QuoteLineItem/fields/Product_Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Description__c</fullName>
    <label>Product Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>