force-app/main/default/objects/QuoteLineItem/fields/Source_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Source_Pricebook__c</fullName>
    <description>Deprecated. Use Source_Pricebook_Ref__c lookup instead.</description>
    <label>Source Pricebook (Legacy)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>