force-app/main/default/objects/QuoteLineItem/fields/Source_Pricebook_Ref__c.field-meta.xml
<CustomField>
    <fullName>Source_Pricebook_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Pricebook that provided the auto-selected price for this line item</description>
    <label>Source Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items_Source</relationshipName>
    <type>Lookup</type>
</CustomField>