force-app/main/default/objects/QuoteLineItem/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <description>Calculated tax amount for this line item: (UnitPrice * Quantity * (1 - Discount/100)) * (Tax%/100).</description>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>