force-app/main/default/objects/QuoteLineItem/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GST</fullName>
                <default>true</default>
                <label>GST</label>
            </value>
            <value>
                <fullName>IGST</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>